# parquet-reader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  parquet_tui.py
.scribe/: design-draft.md  design-plan.md  design-review.md  draft.md  plan.md  readme-draft.md  readme-review.md  review.md
docs/: design.md  next-development-plan.md  usage.md
docs/design/: 00-overview.md  01-scope-and-requirements.md  02-cli-and-error-handling.md  03-app-state-and-actions.md  04-data-access.md  05-value-formatting.md  06-tui-layout-and-navigation.md  07-filtering-and-schema-view.md  08-testing-strategy.md  09-milestones-and-decisions.md  r2.3-datafusion-feasibility.md
src/: action.rs  app.rs  cli.rs  data.rs  error.rs  file_browser.rs  formatting.rs  main.rs  tui.rs
